class2/lessons/cl2_ls7_ipy_output.txt
(py3_venv) [ponnathan@pylab36b lessons]$ ipython -i cl2_ls7.py 
Python 3.11.6 (main, Oct  4 2023, 18:55:41) [GCC 11.4.1 20230605 (Red Hat 11.4.1-2)]
Type 'copyright', 'credits' or 'license' for more information
IPython 7.31.1 -- An enhanced Interactive Python. Type '?' for help.
Password: 
cisco1#

In [1]: net_connect_prompt()
---------------------------------------------------------------------------
NameError                                 Traceback (most recent call last)
<ipython-input-1-6efa70f13df7> in <module>
----> 1 net_connect_prompt()

NameError: name 'net_connect_prompt' is not defined

In [2]: net_connect.find_prompt()
Out[2]: 'cisco1#'

In [3]: dir(net_connect)
Out[3]: 
['RESPONSE_RETURN',
 'RETURN',
 'TELNET_RETURN',
 '__class__',
 '__delattr__',
 '__dict__',
 '__dir__',
 '__doc__',
 '__enter__',
 '__eq__',
 '__exit__',
 '__format__',
 '__ge__',
 '__getattribute__',
 '__getstate__',
 '__gt__',
 '__hash__',
 '__init__',
 '__init_subclass__',
 '__le__',
 '__lt__',
 '__module__',
 '__ne__',
 '__new__',
 '__reduce__',
 '__reduce_ex__',
 '__repr__',
 '__setattr__',
 '__sizeof__',
 '__str__',
 '__subclasshook__',
 '__weakref__',
 '_autodetect_fs',
 '_build_ssh_client',
 '_config_mode',
 '_connect_params_dict',
 '_enter_shell',
 '_first_line_handler',
 '_key_check',
 '_legacy_mode',
 '_lock_netmiko_session',
 '_modify_connection_params',
 '_multiline_kwargs',
 '_open',
 '_prompt_handler',
 '_read_buffer',
 '_return_cli',
 '_sanitize_output',
 '_secrets_filter',
 '_send_command_str',
 '_send_command_timing_str',
 '_session_locker',
 '_session_log_close',
 '_test_channel_read',
 '_timeout_exceeded',
 '_try_session_preparation',
 '_unlock_netmiko_session',
 '_use_ssh_config',
 'allow_agent',
 'allow_auto_change',
 'alt_host_keys',
 'alt_key_file',
 'ansi_escape_codes',
 'auth_timeout',
 'banner_timeout',
 'base_prompt',
 'blocking_timeout',
 'channel',
 'check_config_mode',
 'check_enable_mode',
 'cleanup',
 'clear_buffer',
 'command_echo_read',
 'commit',
 'config_mode',
 'conn_timeout',
 'delay_factor_compat',
 'device_type',
 'disable_lf_normalization',
 'disable_paging',
 'disabled_algorithms',
 'disconnect',
 'enable',
 'encoding',
 'establish_connection',
 'exit_config_mode',
 'exit_enable_mode',
 'fast_cli',
 'find_prompt',
 'global_cmd_verify',
 'global_delay_factor',
 'host',
 'is_alive',
 'keepalive',
 'key_file',
 'key_policy',
 'normalize_cmd',
 'normalize_linefeeds',
 'paramiko_cleanup',
 'passphrase',
 'password',
 'pkey',
 'port',
 'protocol',
 'read_channel',
 'read_channel_timing',
 'read_timeout_override',
 'read_until_pattern',
 'read_until_prompt',
 'read_until_prompt_or_pattern',
 'remote_conn',
 'remote_conn_pre',
 'run_ttp',
 'save_config',
 'secret',
 'select_delay_factor',
 'send_command',
 'send_command_expect',
 'send_command_timing',
 'send_config_from_file',
 'send_config_set',
 'send_multiline',
 'send_multiline_timing',
 'serial_login',
 'serial_settings',
 'session_log',
 'session_preparation',
 'session_timeout',
 'set_base_prompt',
 'set_terminal_width',
 'sock',
 'sock_telnet',
 'special_login_handler',
 'ssh_config_file',
 'strip_ansi_escape_codes',
 'strip_backspaces',
 'strip_command',
 'strip_prompt',
 'system_host_keys',
 'telnet_login',
 'timeout',
 'use_keys',
 'username',
 'verbose',
 'write_channel']

In [4]: help(net_connect.config_mode)


In [5]: help(net_connect.config_mode)


In [6]: net_connect.config_mode()
Out[6]: 'configure terminal\nEnter configuration commands, one per line.  End with CNTL/Z.\ncisco1(config)#'

In [7]: net_connect.exit_config_mode()
Out[7]: 'end\ncisco1#'

In [8]: net_connect.enable()
Out[8]: ''

In [9]: net_connect.write_channel("show ip int brief"\n")
  File "<ipython-input-9-ad35c3e2cefb>", line 1
    net_connect.write_channel("show ip int brief"\n")
                                                  ^
SyntaxError: unexpected character after line continuation character


In [10]: net_connect.write_channel("show ip int brief\n")

In [11]: output = net_connect.read_channel()

In [12]: print()


In [13]: print(output)
show ip int brief
Interface                  IP-Address      OK? Method Status                Protocol
FastEthernet0              unassigned      YES unset  down                  down    
FastEthernet1              unassigned      YES unset  down                  down    
FastEthernet2              unassigned      YES unset  down                  down    
FastEthernet3              unassigned      YES unset  down                  down    
FastEthernet4              10.220.88.20    YES NVRAM  up                    up      
Vlan1                      unassigned      YES unset  down                  down    
cisco1#

In [14]: net_connect.write_channel("disable\n")

In [15]: net_connect.find_prompt()
Out[15]: 'cisco1>'

In [16]: from getpass import getpass

In [17]: net_connect.secret =  getpass()
Password: 

In [18]: net_connect.enable()

In [19]: net_connect.find_prompt()
Out[19]: 'cisco1#'

In [20]:quit 
